--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -1,2 +1,5 @@
+
 @import "../../bower_components/bootstrap-sass/assets/stylesheets/_bootstrap.scss";
-@import "home.scss"
+@import "home.scss";
+@import "../components/slider/styles.scss";
+@import "../components/card/styles.scss";
